--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.1",
     "recharts": "^3.2.1",
     "simple-statistics": "^7.8.8"
   },
