--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "resale-manager",
+  "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
